[package]
name = "multiplayer_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tictactoe_library = { path = "../tictactoe_library" }
multiplayer_server = { path = "../multiplayer_server" }
url = "*"
websocket-lite = "0.5"
futures = "*"
futures-util = "*"


log = "0.4"
env_logger = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
tokio = {version = "1.2",  features = ["macros", "rt-multi-thread"]}




[dev-dependencies]
tokio-test = "*"
test-log = "*"
