[package]
name = "tictactoe-yew"
version = "0.1.0"
edition = "2021"
description = "Tic tac toe on the browser with yew"
readme = "README.md"
repository = ""
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk", "tailwindcss", "daisyui"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = "0.19"
getrandom = { version = "0.2", features = ["js"] }
tictactoe_library = {"path"=  "../tictactoe_library"}
